# imagine_world_model

./: .gitignore  Makefile  README.md  env_conda_imaginenet.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
imagine/: __init__.py  funpair_corr_analysis.py  sim_data.py
models/: 1_datasets.R  3_clusters_net.R
models/clustering_img/: .Rhistory
models/clustering_img/.Rproj.user/8E36051A/pcs/: files-pane.pper
models/clustering_img/.Rproj.user/8E36051A/sources/per/t/: 16DA8C6B  B187B5CB  E36D93A5  E36D93A5-contents
models/clustering_img/.Rproj.user/8E36051A/sources/prop/: 5D10ACFC  61CAAE4B  INDEX
models/clustering_img/.Rproj.user/shared/notebooks/: paths
models/networkimg_ebg/: .Rhistory  data
models/networkimg_ebg/.Rproj.user/8E36051A/pcs/: files-pane.pper  windowlayoutstate.pper
models/networkimg_ebg/.Rproj.user/8E36051A/sources/per/t/: 186B542F  26396334  26396334-contents  4AF95B8F  4AF95B8F-contents  D74186FB  F2C141C8  F2C141C8-contents
models/networkimg_ebg/.Rproj.user/8E36051A/sources/prop/: BF181618  D239C65A  INDEX
models/networkimg_ebg/.Rproj.user/8E36051A/viewer-cache/: B86B409B.Rdata  D616770C.Rdata
notebooks/: network_analysis_centrality_corr.ipynb  network_analysis_cscoeff_and_clustering.ipynb  population_diversity_sampling_merge_human.ipynb  total_vivdness_score_analysis.ipynb  view_centrality_corr_data.ipynb  wrangle_data_ai.ipynb
reports/: tables.pptx
