[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "imagine"
version = "0.0.1"
description = "Internal World Models as Imagination Networks in Cognitive Agents"
authors = [
  { name = "Saurabh Ranjan" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
]
requires-python = ">=3.11.11"


[tool.ruff]
line-length = 99
src = ["imagine"]
include = ["pyproject.toml", "imagine/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["imagine"]
force-sort-within-sections = true

